@@ -1297,7 +1297,8 @@ Joerg Weber
    * Make the creation of reference frame and the decay mechanism depending
      on how much motion was detected relative to threshold setting.
      http://www.lavrsen.dk/twiki/bin/view/Motion/ReferenceFramePatch
-
+   * Removed low_cpu feature.
+   
 Dirk Wesenberg
    * Track pan/tilt support for uvcvideo ( Michal Licko ,Dirk Wesenberg and Angel Carpintero )
      http://www.lavrsen.dk/twiki/bin/view/Motion/LinuxUvcTrackingPatch	
