@@ -178,10 +178,6 @@ gap 60
 # When value is exceeded a new mpeg file is created. (Default: 0 = infinite)
 max_mpeg_time 0
 
-# Number of frames per second to capture when not detecting
-# motion (saves CPU load) (Default: 0 = disabled)
-low_cpu 0
-
 # Always save images even if there was no motion (default: off)
 output_all off
 
